--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "description": "Setup and manage tmux panes using config files",
   "scripts": {
-    "test": "node test"
+    "test": "node test | tap-spec"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rjbernaldo/tmux-grid.git"
+  },
+  "bin": {
+    "tmux-grid": "./index.js"
+  },
+  "engines": {
+    "node": ">=4"
   },
   "author": "",
   "license": "MIT",
@@ -16,9 +22,10 @@
   },
   "homepage": "https://github.com/rjbernaldo/tmux-grid#readme",
   "devDependencies": {
+    "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
   },
   "dependencies": {
-    "meow": "^3.7.0"
+    "commander": "^2.9.0"
   }
 }
