--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tape": "^4.6.3"
   },
   "dependencies": {
+    "child-process": "^1.0.2",
     "commander": "^2.9.0",
     "js-yaml": "^3.8.3"
   }
