--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Setup and manage tmux panes using config files",
   "scripts": {
-    "test": "node test | tap-spec"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,7 @@
   },
   "homepage": "https://github.com/rjbernaldo/tmux-grid#readme",
   "devDependencies": {
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.3"
+    "jest": "^20.0.4"
   },
   "dependencies": {
     "child-process": "^1.0.2",
